Type in corrections from printed manuscript

--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -16,7 +16,6 @@
 	number = {2},
 	month = sep,
 	year = {2011},
-	issn = {1094-9224},
 	pages = {15:1--15:28},
 	articleno = {15},
 	numpages = {28},
@@ -29,7 +28,7 @@
 @inproceedings{HAM06,
 	author = {Dick Hamlet},
 	title = {When only random testing will do},
-	booktitle = {Proceedings of the 1st international workshop on Random testing},
+	booktitle = {Proceedings of the 1st International Workshop on Random Testing},
 	series = {RT '06},
 	year = {2006},
 	location = {Portland, Maine},
@@ -155,7 +154,7 @@
 @inproceedings{GODE07,
 	author = {Patrice Godefroid},
 	title = {Random testing for security: blackbox vs. whitebox fuzzing},
-	booktitle = {Proceedings of the 2nd international workshop on Random testing: co-located with the 22nd IEEE/ACM International Conference on Automated Software Engineering (ASE 2007)},
+	booktitle = {Proceedings of the 2nd International Workshop on Random Testing: Co-located with the 22nd IEEE/ACM International Conference on Automated Software Engineering (ASE 2007)},
 	series = {RT '07},
 	year = {2007},
 	location = {Atlanta, Georgia},
@@ -170,7 +169,7 @@
 @inproceedings{GGBO07,
 	author = {Rainer Gerlich and Ralf Gerlich and Thomas Boll},
 	title = {Random testing: from the classical approach to a global view and full test automation},
-	booktitle = {Proceedings of the 2nd international workshop on Random testing: co-located with the 22nd IEEE/ACM International Conference on Automated Software Engineering (ASE 2007)},
+	booktitle = {Proceedings of the 2nd International Workshop on Random Testing: Co-located with the 22nd IEEE/ACM International Conference on Automated Software Engineering (ASE 2007)},
 	series = {RT '07},
 	year = {2007},
 	location = {Atlanta, Georgia},
@@ -185,7 +184,7 @@
 @inproceedings{RAWO06,
 	author = {Rudolf Ramler and Klaus Wolfmaier},
 	title = {Economic perspectives in test automation: balancing automated and manual testing with opportunity cost},
-	booktitle = {Proceedings of the 2006 international workshop on Automation of software test},
+	booktitle = {Proceedings of the 2006 International Workshop on Automation of Software Test},
 	series = {AST '06},
 	year = {2006},
 	location = {Shanghai, China},
@@ -207,7 +206,7 @@
 @inproceedings{DDGM07,
 	author = {Brett Daniel and Danny Dig and Kely Garcia and Darko Marinov},
 	title = {Automated testing of refactoring engines},
-	booktitle = {Proceedings of the the 6th joint meeting of the European software engineering conference and the ACM SIGSOFT symposium on The foundations of software engineering},
+	booktitle = {Proceedings of the the 6th Joint Meeting of the European Software Engineering Conference and the ACM SIGSOFT Symposium on the Foundations of Software Engineering},
 	series = {ESEC-FSE '07},
 	year = {2007},
 	location = {Dubrovnik, Croatia},
@@ -245,8 +244,8 @@
 
 @inproceedings{FFM11,
 	author = {Asger Feldthaus and Todd Millstein and Anders M{\o}ller and Max Sch\"{a}fer and Frank Tip},
-	title = {Tool-supported refactoring for JavaScript},
-	booktitle = {Proceedings of the 2011 ACM international conference on Object oriented programming systems languages and applications},
+	title = {Tool-supported refactoring for {JavaScript}},
+	booktitle = {Proceedings of the 2011 ACM International Conference on Object Oriented Programming Systems Languages and Applications},
 	series = {OOPSLA '11},
 	year = {2011},
 	location = {Portland, Oregon, USA},
@@ -261,7 +260,7 @@
 @inproceedings{ZWZH11,
 	author = {Jinjing Zhao and Yan Wen and Gang Zhao},
 	title = {H-fuzzing: a new heuristic method for fuzzing data generation},
-	booktitle = {Proceedings of the 8th IFIP international conference on Network and parallel computing},
+	booktitle = {Proceedings of the 8th IFIP International Conference on Network and Parallel Computing},
 	series = {NPC'11},
 	year = {2011},
 	location = {Changsha, China},
@@ -293,14 +292,13 @@
 	Institution="Logicon Inc",
 }
 
-@article {BOJO80,
+@article{BOJO80,
 	author = {H. J. Boom and E. de Jong},
 	title = {A critical comparison of several programming language implementations},
 	journal = {Software: Practice and Experience},
 	volume = {10},
 	number = {6},
 	publisher = {John Wiley & Sons, Ltd.},
-	issn = {1097-024X},
 	doi = {10.1002/spe.4380100605},
 	pages = {435--473},
 	keywords = {Algol 60, FORTRAN, Pascal, Algol 68, Programming language implementation, CDC Cyber 73},
@@ -316,7 +314,6 @@
 	number = {10},
 	month = oct,
 	year = {2000},
-	issn = {0018-9162},
 	pages = {23--29},
 	numpages = {7},
 	doi = {10.1109/2.876288},
@@ -342,7 +339,7 @@
 	tags = {programming languages, empirical, human factors, state machines, programming, type soundness, e-science},
 	cites = {0},
 	citedby = {0},
-	booktitle = {OOPSLA '10: Proceedings of the ACM international conference on Object oriented programming systems languages and applications},
+	booktitle = {OOPSLA '10: Proceedings of the ACM International Conference on Object Oriented Programming Systems Languages and Applications},
 	address = {New York, NY, USA},
 	publisher = {ACM},
 	isbn = {978-1-4503-0203-6},
@@ -351,7 +348,7 @@
 @inproceedings{STHA11,
 	author = {Andreas Stuchlik and Stefan Hanenberg},
 	title = {Static vs. dynamic type systems: an empirical study about the relationship between type casts and development time},
-	booktitle = {Proceedings of the 7th symposium on Dynamic languages},
+	booktitle = {Proceedings of the 7th Symposium on Dynamic Languages},
 	series = {DLS '11},
 	year = {2011},
 	isbn = {978-1-4503-0939-4},
@@ -365,7 +362,7 @@
 
 @inproceedings{KHRT12,
 	author    = {Sebastian Kleinschmager and Stefan Hanenberg and Romain Robbes and {\'E}ric Tanter and Andreas Stefik},
-	title     = {Do static type systems improve the maintainability of software systems? An empirical study},
+	title     = {Do static type systems improve the maintainability of software systems?  {A}n empirical study},
 	booktitle = {Proceedings of the International Conference on Program Comprehension},
 	year      = {2012},
 	pages     = {153-162},
@@ -376,7 +373,7 @@
 @inproceedings{LFGC07,
 	author = {Benjamin S. Lerner and Matthew Flower and Dan Grossman and Craig Chambers},
 	title = {Searching for type-error messages},
-	booktitle = {Proceedings of the 2007 ACM SIGPLAN conference on Programming language design and implementation},
+	booktitle = {Proceedings of the 2007 ACM SIGPLAN Conference on Programming Language Design and Implementation},
 	series = {PLDI '07},
 	year = {2007},
 	isbn = {978-1-59593-633-2},
@@ -400,7 +397,6 @@
 	pages = "289-300",
 	year = "1984",
 	note = "",
-	issn = "0164-1212",
 	doi = "10.1016/0164-1212(84)90028-1",
 	Where="pub/lib"
 }
@@ -424,7 +420,6 @@
 	number = {6},
 	month = apr,
 	year = {1975},
-	issn = {0362-1340},
 	pages = {327--336},
 	numpages = {10},
 	Note = {Proceedings of the International Conference on Reliable Software},
@@ -432,4 +427,13 @@
 	publisher = {ACM},
 	address = {New York, NY, USA},
 	Where="pub/lib"
-} 
+}
+
+@article{Fis35,
+	author = {Fisher, R. A.},
+	title = {The logic of inductive inference},
+	journal = {Journal of the Royal Statistical Society Series A},
+	volume = {98},
+	year = {1935},
+	pages = {39--54}
+}
