Add reference to LFGC07

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -674,7 +674,8 @@ It would also be interesting to test a wider variety of languages.
 Although Haskell performed broadly similarly to the other strongly-typed
 languages in our set we would hope that other declarative languages
 would exhibit more interesting characteristics.
-The fuzz operations can be also extended and be made more realistic,
+The fuzz operations can be also extended
+and be made more realistic~\cite{LFGC07},
 perhaps by implementing a mixture based on data from actual programming
 errors.
 Ideally, we would want to construct fuzz scenarios by taking
