--- a/pub/fuzzer.bib
+++ b/pub/fuzzer.bib
@@ -370,23 +370,18 @@
 	location  = {Passau, Germany}
 }
 
-@inproceedings{LFGC07,
-	author = {Benjamin S. Lerner and Matthew Flower and Dan Grossman and Craig Chambers},
-	title = {Searching for type-error messages},
-	booktitle = {Proceedings of the 2007 ACM SIGPLAN Conference on Programming Language Design and Implementation},
-	series = {PLDI '07},
+@article{LFGC07,
+	author = {Lerner, Benjamin S. and Flower, Matthew and Grossman, Dan and Chambers, Craig},
+	title = {Searching for Type-error Messages},
+	note = {Proceedings of the 2007 ACM SIGPLAN Conference on Programming Language Design and Implementation},
+	journal = {SIGPLAN Notices},
+	volume = {42},
+	number = {6},
+	month = jun,
 	year = {2007},
-	isbn = {978-1-59593-633-2},
-	location = {San Diego, California, USA},
 	pages = {425--434},
-	numpages = {10},
-	url = {http://doi.acm.org/10.1145/1250734.1250783},
-	doi = {10.1145/1250734.1250783},
-	acmid = {1250783},
-	publisher = {ACM},
-	address = {New York, NY, USA},
-	keywords = {error messages, objective Caml, seminal, type-checking, type-inference},
-} 
+	doi = {10.1145/1273442.1250783},
+}
 
 @article{OW84,
 	author = "Thomas J. Ostrand and Elaine J. Weyuker",
