Statically compiled -> checked

--- a/pub/fuzzer.tex
+++ b/pub/fuzzer.tex
@@ -585,7 +585,7 @@ that less errors escape detection in static languages than dynamic.
 
 \item There are clusters of black longenes
 (indicating a failure to show a significant difference)
-between statically compiled languages:
+between statically checked languages:
 C and C++,
 C++ and Java,
 Haskell and Java.
