convert chart.pdf -> chart.ps; modified Makefile to compile to camera ready copy

--- a/pub/camera-ready/fuzzer.tex
+++ b/pub/camera-ready/fuzzer.tex
@@ -12,7 +12,7 @@
 \usepackage{bbding}
 \usepackage{pifont}
 \usepackage{url}
-\usepackage[pdftex]{graphicx}
+\usepackage{graphicx}
 \usepackage{subfigure}
 \usepackage{lscape}
 
