making final adjustements for the paper

--- a/pub/camera-ready/fuzzer.tex
+++ b/pub/camera-ready/fuzzer.tex
@@ -21,10 +21,8 @@
 \conferenceinfo{PLATEAU'12,} {October 21, 2012, Tucson, Arizona, USA.}
 \CopyrightYear{2012}
 \copyrightdata{978-1-4503-1631-6/12/10}
-% \copyrightdata{ }
-
-%\titlebanner{banner above paper title} % These are ignored unless
-%\preprintfooter{short description of paper} % 'preprint' option specified.
+\toappear{Permission to make digital or hard copies of all or part of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. To copy otherwise, or republish, to post on servers or to redistribute to lists, requires prior specific permission and/or a fee. PLATEAU’12, October 21, 2012, Tucson, Arizona, USA.
+Copyright © 2012 ACM 978-1-4503-1631-6/12/10...\$15.00.}
 
 \title{Comparative Language Fuzz Testing}
 \subtitle{Programming Languages vs. Fat Fingers}
