--- a/pub/camera-ready/fuzzer.tex
+++ b/pub/camera-ready/fuzzer.tex
@@ -429,7 +429,7 @@ would have to write more code and keep in sync mutually dependent parts
 of it.
 
 \begin{figure*}
-        \includegraphics[scale=0.60]{chart2}
+        \includegraphics[scale=0.60]{chart}
         \caption{Failure modes for each phase per language and overall.}
         \label{fig:results}
 \end{figure*}
