Changes following to camera-ready feedback
Feedback:
Please fix the following on your submission and submit your fixed/revised files on or before November 25th:

1. Your completed ACM eform is needed. Please see this link: http://cms.acm.org/forms/copyright.cfm?confID=020500021C05020408&proceedingID=04020801&paperID=04&sequence=1      to complete the appropriate ACM form. The new eform usually only takes moments to complete, kindly attend to this within the next 48 hours.

2. Please use \vfill\eject before reference 32 to move more over to column two (2) and produce a more balanced last page. (This command is great for forcing material over to the next page.) Be sure that you have run bibtex, then cut and paste the references from your bbl file into your tex file.

3. Please use a force break in the copyright permission blurb so the last two lines begin with \PLATEAU'12 (italicized) and \Copyright, respectively.

--- a/pub/camera-ready/fuzzer.tex
+++ b/pub/camera-ready/fuzzer.tex
@@ -21,8 +21,6 @@
 \conferenceinfo{PLATEAU'12,} {October 21, 2012, Tucson, Arizona, USA.}
 \CopyrightYear{2012}
 \copyrightdata{978-1-4503-1631-6/12/10}
-\toappear{Permission to make digital or hard copies of all or part of this work for personal or classroom use is granted without fee provided that copies are not made or distributed for profit or commercial advantage and that copies bear this notice and the full citation on the first page. To copy otherwise, or republish, to post on servers or to redistribute to lists, requires prior specific permission and/or a fee. PLATEAU’12, October 21, 2012, Tucson, Arizona, USA.
-Copyright © 2012 ACM 978-1-4503-1631-6/12/10...\$15.00.}
 
 \title{Comparative Language Fuzz Testing}
 \subtitle{Programming Languages vs. Fat Fingers}
@@ -1181,6 +1179,9 @@ M.~Sch\"{a}fer.
 \newblock In \emph{Proceedings of the Fifth Workshop on Refactoring Tools}, WRT
   '12, pages 59--62, New York, NY, USA, 2012. ACM.
 \newblock \doi{10.1145/2328876.2328885}.
+
+% Balance last page columns
+\vfill\eject
 
 \bibitem[Stuchlik and Hanenberg(2011)]{STHA11}
 A.~Stuchlik and S.~Hanenberg.
